--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap');
 
 :root {
-    --primary-color: #3af83a;
-    --secondary-color: #00c400;
+    --primary-color: #8ee367;
+    --secondary-color: #48b148;
 }
 
 body {
@@ -108,6 +108,7 @@ table {
     font-size: 1.5rem;
     margin: auto;
     width: 80%;
+    margin-bottom: 1rem;
 }
 .table-heading {
     font-size: 2rem;
@@ -139,7 +140,7 @@ td {
     font-size: 1.3rem;
     font-weight: 600;
     background-color: var(--primary-color);
-    width: 70%;
+    width: 60%;
     margin: 0.5rem auto;
     padding: 0.2rem 0.5rem;
     border-radius: 0.2rem;
